# python-yapily

./: .gitlab-ci.yml  .travis.yml  README.md  package-lock.json  pyproject.toml  requirements.txt  setup.py  tox.ini
.openapi-generator/: FILES
docs/: Account.md  AccountApiListResponse.md  AccountAuthorisationRequest.md  AccountAuthorisationResponse.md  AccountBalance.md  AccountBalanceType.md  AccountEmbeddedAuthorisationRequest.md  AccountIdentification.md  AccountIdentificationResponse.md  AccountIdentificationType.md  AccountIdentificationTypeResponse.md  AccountInfo.md  AccountName.md  AccountRequest.md  AccountStatement.md  AccountType.md  Address.md  AddressDetails.md  AddressResponse.md  AddressTypeEnum.md  AddressTypeEnumResponse.md  AlignmentEnum.md  Amount.md  AmountDetailsResponse.md  ApiError.md  ApiErrorResponse.md  ApiErrorResponseV2.md  ApiErrorResponseV2Error.md  ApiErrorResponseV2ErrorIssuesInner.md  ApiListOfApplicationResponse.md  ApiListResponseOfAccountStatement.md  ApiListResponseOfBeneficiary.md  ApiListResponseOfCategory.md  ApiListResponseOfConsent.md  ApiListResponseOfDataConstraints.md  ApiListResponseOfDirectDebitResponse.md  ApiListResponseOfEventSubscriptionResponse.md  ApiListResponseOfFeatureDetails.md  ApiListResponseOfInstitution.md  ApiListResponseOfPaymentConstraints.md  (+388 more)
openapi_client/: __init__.py  api_client.py  rest.py
test/: test_account.py  test_account_api_list_response.py  test_account_authorisation_request.py  test_account_authorisation_response.py  test_account_balance.py  test_account_balance_type.py  test_account_embedded_authorisation_request.py  test_account_identification.py  test_account_identification_response.py  test_account_identification_type.py  test_account_identification_type_response.py  test_account_info.py  test_account_name.py  test_account_request.py  test_account_statement.py  test_account_type.py  test_address.py  test_address_details.py  test_address_response.py  test_address_type_enum.py  test_address_type_enum_response.py  test_alignment_enum.py  test_amount.py  test_amount_details_response.py  test_api_error.py  (+403 more)
(+564 files in other folders)
